# zks-vpn

./: 138.2.98.224.key  138.2.98.224.pub  ARCHITECTURE.md  DEEP_ANALYSIS.md  EMAIL_DRAFT.md  LICENSE  README.md  ROADMAP.md  SECURITY_ANALYSIS.md  VERIFICATION_GUIDE.md  VPN_DEPLOYMENT_GUIDE.md  WASIF_VERNAM.md  ZKS-Revised_Protocol.md  ZKS_DCUtR.md  ZKS_Protocol_Paper.md  blog.md  check_output.txt  cmd.md  innovation_paper.md  start_chain.bat  system_wide_vpn_research.md  whitepaper.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-worker.yml  proverif.yml  release.yml  security-tests.yml  security.yml  vpn-exit-node.yml
Oracle/: md.wasif.faisal@g.bracu.ac.bd-2025-11-21T09_12_08.635Z.pem  md.wasif.faisal@g.bracu.ac.bd-2025-11-21T09_12_10.899Z_public.pem
p2pcf-relay/: Cargo.toml  wrangler.toml
p2pcf-relay/.github/workflows/: deploy.yml
p2pcf-relay/src/: lib.rs  relay_room.rs
p2pcf-ws/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
p2pcf-ws/src/: SignalingRoom.ts  index.ts
p2pcf-ws/src/client/: WebSocketTransport.ts  index.ts
p2pd-main/: README.md
p2pd-main/tests/: manual_test.py
verification/: README.md  zks_handshake.pv  zks_handshake.spthy
zks-go-client/: go.mod  go.sum  main.go
zks-go-client/protocol/: crypto.go  message.go  pool.go
zks-go-client/relay/: connection.go
zks-go-client/socks5/: server.go
zks-go-client/vpn/: tun.go
zks-tunnel-client/: Cargo.toml  build_errors.txt  check_output.txt  out.txt  warnings.txt
zks-tunnel-client/src/: anti_replay.rs  anti_replay_enhanced.rs  birthday_attack.rs  chain.rs  ct_ops.rs  dns_guard.rs  entropy_tax.rs  entry_node.rs  exit_forwarder.rs  exit_node_udp.rs  exit_peer.rs  exit_service.rs  file_transfer.rs  http_proxy.rs  hybrid_data.rs  key_exchange.rs  kill_switch.rs  kyber_hybrid.rs  lib.rs  libp2p_transport.rs  linux_routing.rs  main.rs  nat_detection.rs  nat_detection_test.rs  nat_traversal.rs  onion.rs  p2p_client.rs  p2p_relay.rs  p2p_swarm.rs  p2p_vpn.rs  port_prediction.rs  pq_signatures.rs  recursive_chain.rs  relay_service.rs  scramble.rs  secure_birthday_attack.rs  secure_port_prediction.rs  secure_stun.rs  signaling.rs  stun_security.rs  (+12 more)
zks-tunnel-client/src/dns_guard/: windows.rs
zks-tunnel-client/src/kill_switch/: linux.rs  stub.rs  windows.rs
zks-tunnel-client/tests/: dcutr_test.rs  dcutr_vpn_test.rs  libp2p_simple_test.rs  simple_dcutr_test.rs  simple_stun_test.rs  standalone_stun_test.rs  stun_dcutr_integration_test.rs  stun_validation_test.rs
zks-tunnel-proto/src/: message.rs
zks-tunnel-relay/: Cargo.toml  wrangler.toml
zks-tunnel-relay/src/: entropy_pool.rs  lib.rs  vpn_room.rs
zks-tunnel-worker/: Cargo.toml  wrangler.toml  zks-key.toml
zks-tunnel-worker/src/: lib.rs  tunnel_session.rs
