[package]
name = "p2pcf-relay"
version = "0.1.0"
edition = "2021"
authors = ["BuzzU Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7.1"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
