[package]
name = "zks-tunnel-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ZKS-Tunnel Client - Local SOCKS5 proxy and System-Wide VPN"

[[bin]]
name = "zks-vpn"
path = "src/main.rs"

[features]
default = ["socks5"]
socks5 = []
vpn = ["tun-rs", "netstack-smoltcp", "smoltcp", "reqwest"]

[dependencies]
zks-tunnel-proto = { path = "../zks-tunnel-proto" }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
getrandom = { workspace = true }
base64 = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

# System-Wide VPN dependencies (optional)
tun-rs = { version = "2", optional = true, features = ["async"] }
netstack-smoltcp = { version = "0.2", optional = true }
smoltcp = { version = "0.12", optional = true, default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "socket-tcp", "socket-udp"] }
reqwest = { version = "0.11", optional = true, default-features = false, features = ["rustls-tls"] }
tokio-util = { version = "0.7.17", features = ["compat"] }

[target.'cfg(windows)'.dependencies]
# Windows-specific: Wintun driver bindings

[target.'cfg(unix)'.dependencies]
libc = "0.2"
