[package]
name = "zks-tunnel-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ZKS-Tunnel Client - Local SOCKS5 proxy and System-Wide VPN"

[[bin]]
name = "zks-vpn"
path = "src/main.rs"

[features]
default = ["socks5"]
socks5 = []
vpn = ["tun-rs", "netstack-smoltcp", "smoltcp"]
swarm = ["dep:libp2p", "dep:pqcrypto-kyber", "dep:pqcrypto-traits", "vpn"]

[dependencies]
zks-tunnel-proto = { path = "../zks-tunnel-proto" }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
getrandom = { workspace = true }
base64 = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

# System-Wide VPN dependencies (optional)
tun-rs = { version = "2", optional = true, features = ["async", "tokio"] }
netstack-smoltcp = { version = "0.2", optional = true }
smoltcp = { version = "0.12", optional = true, default-features = false, features = ["std", "log", "medium-ip", "proto-ipv4", "socket-tcp", "socket-udp"] }
tokio-util = { version = "0.7.17", features = ["compat"] }

# HTTP client for P2P Exit Peer and HTTP proxy mode
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

# Cryptography for key exchange
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
chacha20poly1305 = "0.10"
simple-dns = "0.6"
tokio-socks = "0.5"
native-tls = "0.2"
tokio-native-tls = "0.3"

# libp2p for P2P swarm with DCUtR hole-punching (optional, for swarm feature)
libp2p = { version = "0.54", features = ["dcutr", "relay", "identify", "noise", "tcp", "quic", "yamux", "dns", "tokio", "macros", "ping"], optional = true }

# Post-quantum cryptography (optional, for swarm feature)
pqcrypto-kyber = { version = "0.8", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }

[target.'cfg(windows)'.dependencies]
# Windows-specific: Wintun driver bindings

[target.'cfg(unix)'.dependencies]
libc = "0.2"
